Configure docker services, use direct exchange, fix paths